<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.ufrn.dim0524.hub.bascore.BascoreActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_return_bascore"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="monospace"
            android:gravity="center"
            android:padding="16dp"
            android:text="Bascore"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timeA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Time A"
                android:textColor="@color/team_a_color"
                android:textStyle="bold"
                android:textSize="14sp"
                android:fontFamily="sans-serif"/>

            <TextView
                android:id="@+id/placarTimeA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="10dp"
                android:text="0"
                android:textColor="@color/team_a_color"
                android:textSize="84sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tresPontosA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/team_a_color"
                android:text="@string/plus_three_throw" />

            <Button
                android:id="@+id/doisPontosA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/team_a_color"
                android:text="@string/plus_two_throw" />

            <Button
                android:id="@+id/tiroLivreA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/team_a_color"
                android:text="@string/free_throw" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timeB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Time B"
                android:textColor="@color/team_b_color"
                android:textStyle="bold"
                android:textSize="14sp"
                android:fontFamily="sans-serif"/>

            <TextView
                android:id="@+id/placarTimeB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="0"
                android:textSize="84sp"
                android:textColor="@color/team_b_color"
                android:textStyle="bold"
                android:fontFamily="sans-serif"/>

            <Button
                android:id="@+id/tresPontosB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/team_b_color"
                android:text="@string/plus_three_throw" />

            <Button
                android:id="@+id/doisPontosB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/team_b_color"
                android:text="@string/plus_two_throw" />

            <Button
                android:id="@+id/tiroLivreB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/team_b_color"
                android:text="@string/free_throw" />
        </LinearLayout>

    </LinearLayout>



    <Button
        android:id="@+id/reiniciarPartida"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_game"
        android:layout_margin="45dp"/>
</LinearLayout>